# libea

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md  main.cpp  notes.md
benchmark/: CMakeLists.txt  benchmark.cpp  compile_commands.json
benchmark/R/: benchmark.R  csa_cma_es.R  ppmf_cma_es.R
cmake/: compile_configuration.cmake  eacxxConfig.cmake.in
include/libea/: Math.h
include/libea/common/: concepts.h  consts.h  random.hpp  types.h
include/libea/math/: evaluate.hpp  generators.hpp  sort.hpp
include/libea/solvers/cmaes/: cmaes.hpp  parameters.hpp  solutions.hpp  solver.hpp
include/libea/termination/: predefined.hpp  termination.hpp
include/libea/updaters/sigma/: csa.hpp  idle.hpp  ppmf.hpp
test/: CMakeLists.txt  main.cpp
